@@ -9,12 +9,15 @@
 	$tpl->define(
 		array(
 			download		=> "download.tpl",
+			empty_tpl		=> "empty.tpl",
+			section			=> "download_section.tpl",
 			d_entry			=> "download_entry.tpl",
 			s_entry			=> "snapshot_entry.tpl"
 		)
 	);
 
-	// dirty trick to seperate data and content a bit ;)
+	// We seperate data and content. The content still is PHP code, but 
+	// very easy to change and maintain
 	include("content/download.dat");
 	
 	$tpl->parse(CONTENT, "download");
@@ -24,7 +27,30 @@
 	exit;
 
 
-	function add_download( $file, $desc, $size )
+	function begin_section( $section )
+	{
+		global $tpl;
+		
+		// Set the name of the current section
+		$tpl->assign(
+			array(
+				SECTION_TITLE	=>	$section
+			)
+		);
+	}
+
+	function end_section()
+	{
+		global $tpl;
+		
+		// Write out the section
+		$tpl->parse(DOWNLOAD_SECTIONS,".section");
+
+		// Close the section entries list, in preparation for the new section
+		$tpl->parse(SECTION_ENTRIES,"empty_tpl");
+	}
+
+	function add_extern_entry( $file, $desc, $size )
 	{
 		global $tpl;
 		
@@ -35,24 +61,10 @@
 				SIZE		=>	$size
 			)
 		);
-		$tpl->parse(DOWNLOAD_ENTRIES,".d_entry");
+		$tpl->parse(SECTION_ENTRIES,".d_entry");
 	}
 
-	function add_download2( $file, $desc, $size )
-	{
-		global $tpl;
-		
-		$tpl->assign(
-			array(
-				FILENAME	=>	$file,
-				DESCRIPTION	=>	$desc,
-				SIZE		=>	$size
-			)
-		);
-		$tpl->parse(DOWNLOAD_ENTRIES2,".d_entry");
-	}
-
-	function add_snapshot( $file, $desc )
+	function add_local_entry( $file, $desc )
 	{
 		global $tpl;
 		
@@ -62,40 +74,9 @@
 				DESCRIPTION	=>	$desc,
 				FILE_TIME	=>	date("H:i",filemtime("snapshots/$file")),
 				FILE_DATE	=>	date("Y-m-d",filemtime("snapshots/$file")),
-				SIZE		=>	ceil(filesize("snapshots/$file")/1000)
+				SIZE		=>	ceil(filesize("snapshots/$file")/1024)
 			)
 		);
-		$tpl->parse(SNAPSHOT_ENTRIES,".s_entry");
+		$tpl->parse(SECTION_ENTRIES,".s_entry");
 	}
-
-		function add_pentagram( $file, $desc )
-	{
-		global $tpl;
-		
-		$tpl->assign(
-			array(
-				FILENAME	=>	$file,
-				DESCRIPTION	=>	$desc,
-				FILE_TIME	=>	date("H:i",filemtime("snapshots/$file")),
-				FILE_DATE	=>	date("Y-m-d",filemtime("snapshots/$file")),
-				SIZE		=>	ceil(filesize("snapshots/$file")/1000)
-			)
-		);
-		$tpl->parse(PENTAGRAM_ENTRIES,".s_entry");
-	}
-	
-	function add_datafile( $file, $desc, $size )
-	{
-		global $tpl;
-		
-		$tpl->assign(
-			array(
-				FILENAME	=>	$file,
-				DESCRIPTION	=>	$desc,
-				SIZE		=>	$size
-			)
-		);
-		$tpl->parse(DATA_ENTRIES,".d_entry");
-	}
-
 ?>
