@@ -1,45 +1,12 @@
 <p>Downloads are hosted on SF. If you have one of the supported systems, you can directly download the appropriate binary distribution. If you have another system, download the source and read the INSTALL file for directions on how to build &amp; run <i>Exult</i>.</p>
-<p>For a full list, and also older versions, look <a href="http://sourceforge.net/project/showfiles.php?group_id=2335&amp;release_id=63316">here</a>.</p>
+<p>For a full list, and also older versions, look <a href="http://sourceforge.net/project/showfiles.php?group_id=2335">here</a>.</p>
 <p>If you have succesfully ported <i>Exult</i> to a platform not listed here, PLEASE drop us a note, telling which OS, compiler etc. you used. Even better would be if you submit to us the changes that were necessary to get it to run so we can incorporate them into future releases, and add instructions to the README.<br>
 	But if you really want us to love you, become part of the project and officially maintain your port, that means making sure it builds for each release, and provide if possible a binary for your system. As a reward you'll get your own entry in the <i>Exult</i> credits, this homepage and the docs :)</p>
 <p></p>
 <table border="0" cellpadding="1" cellspacing="3">
-	<tr>
-		<td colspan="4"><b>Official - v0.96beta1</b></td>
-	</tr>
-	{DOWNLOAD_ENTRIES}
-	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
 
-	<tr>
-		<td colspan="4"><b>Older releases</b></td>
-	</tr>
-	{DOWNLOAD_ENTRIES2}
-	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
+	{DOWNLOAD_SECTIONS}
 
-	<tr>
-		<td colspan="2"><b>Additional Data files (not required)</b></td>
-		<td width="10"></td>
-		<td></td>
-	</tr>
-	{DATA_ENTRIES}
-	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
-
-	<tr>
-		<td colspan="2"><b>Snapshots - use at your own risk!</b></td>
-		<td width="10"></td>
-		<td></td>
-	</tr>
-	{SNAPSHOT_ENTRIES}
-	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
-	
-	<tr>
-		<td colspan="2"><b>Pentagram - Experimental map and shapes viewer for Ultima 8</b></td>
-		<td width="10"></td>
-		<td></td>
-	</tr>
-	{PENTAGRAM_ENTRIES}
-	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
-	
 	<tr>
 		<td colspan="4"><b>Libraries</b></td>
 	</tr>
