@@ -1,4 +1,9 @@
 2002-03-12  Dominik Reichardt <gigdr@tesionmail.de>
+	* download.php, content/download.dat: Major rewrite, should simplify handling
+	  of the download section; updated to version 0.98rc1 files
+	* templates/download_section.tpl, templates/empty.tpl: New auxillary files
+
+2002-03-12  Dominik Reichardt <gigdr@tesionmail.de>
 	* faq.txt, content/faq.dat: version updated+other small updates
 	
 2002-03-11  Dominik Reichardt <gigdr@tesionmail.de>
